RESOLVED FIXED256083
[GStreamer] Fix video playback with Westeros sink (typos)
https://bugs.webkit.org/show_bug.cgi?id=256083
Summary [GStreamer] Fix video playback with Westeros sink (typos)
Attachments
Andrzej Surdej
Comment 1 2023-04-28 01:53:01 PDT
EWS
Comment 2 2023-04-28 06:23:53 PDT
Committed 263498@main (2dc265cfdcc3): <https://commits.webkit.org/263498@main> Reviewed commits have been landed. Closing PR #13266 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-28 06:24:20 PDT
Note You need to log in before you can comment on or make changes to this bug.