[GStreamer] Fix video playback with Westeros sink https://bugs.webkit.org/show_bug.cgi?id=256083

Reviewed by Philippe Normand and Xabier Rodriguez-Calvar.

Fix typos that negate conditions.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::configureElementPlatformQuirks):

Canonical link: https://commits.webkit.org/263498@main